forth file have sent to developer team

--- a/forth.html
+++ b/forth.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
-<body style="font-family: 'Roboto', sans-serif; background-color: #dedede; margin: 0; padding: 0; box-sizing: border-box;">
+<body style="margin: 0; padding: 0; font-family: 'Roboto', sans-serif; background-color: #dedede; box-sizing: border-box; padding-top:30px">
 
 <table width="800" border="0" cellpadding="0" cellspacing="0" align="center" style="padding: 20px; background-color: #FFFFFF;">
 
@@ -37,13 +37,14 @@
   <tr><td colspan="2" style="height: 25px;"></td></tr>
 
   <!-- Banner Image Substitute -->
-  <tr style="height: 115px;">
-    <td colspan="2" style="position: relative; overflow: hidden; background-color: #305DFF; color: #FFFFFF; text-align: left; font-size: 32px; font-weight: 800; padding: 12px; border-radius: 10px; font-family: Montserrat, sans-serif; z-index: 2;">
-      Authority Update Required!
-
-      <img src="./cuate.png" alt="" style="position: absolute; width: 160px; height: 160px; top: -42px; right: 94px; z-index: -1;">
-      <img src="./Group (1).png" alt="" style="position: absolute; top: 9px; right: -37px; z-index: -1;">
-      <img src="./Group (2).png" alt="" style="position: absolute; bottom: 0; left: 0; z-index: -1;">
+  <tr width="100%" cellspacing="0" cellpadding="0" border="0" style="max-width: 739px; margin: auto; border-radius: 10px; overflow: hidden;">
+    <td 
+      colspan="2"
+      background="Illustration.png" 
+      valign="middle" 
+      height="115" 
+      style="background-size: cover; background-position: center; border-radius: 10px; font-family: Montserrat, sans-serif; z-index: 2;">
+      <p style="color: #FFFFFF; text-align: left; font-size: 32px; font-weight: 800; font-family: Montserrat, sans-serif; margin-left: 12px;">Authority Update Required!</p>
     </td>
   </tr>
 
@@ -71,7 +72,7 @@
 
   <!-- List Header -->
   <tr>
-    <td colspan="2" style="font-weight: 600; line-height: 22px; font-size: 16px; padding-bottom: 12px;">
+    <td colspan="2" style="font-weight: 600; line-height: 22px; font-size: 16px; padding-bottom: 12px; color: #11162F">
       List of Departed Employees:
     </td>
   </tr>
@@ -81,55 +82,55 @@
     <td colspan="2">
         <div style="overflow-x: auto;">
             <table width="100%" cellpadding="8" cellspacing="0" style="border: 1px solid #E5E6EC; border-collapse: separate; border-spacing: 0; width: 100%; min-width: 800px; border-radius: 11px;">
-                <thead style="background-color: #F2F3F5; font-size: 14px; font-weight: 600; line-height: 22px; color: #202020;">
-                <th align="left" style="padding-left: 10px; background-color: #F2F3F5; white-space: nowrap; border-top-left-radius: 11px;">Name</th>
-                <th align="left" style="padding-left: 10px; background-color: #F2F3F5; white-space: nowrap;">Email</th>
-                <th align="left" style="padding-left: 10px; background-color: #F2F3F5; white-space: nowrap;">Termination Date</th>
-                <th align="left" style="padding-left: 10px; background-color: #F2F3F5; white-space: nowrap;">Authority</th>
-                <th align="left" style="padding-left: 10px; background-color: #F2F3F5; white-space: nowrap; border-top-right-radius: 11px;">Application Name</th>
+                <thead style="background-color: #F2F3F5; font-size: 14px; font-weight: 600; line-height: 22px;">
+                <th align="left" style="padding-left: 10px; background-color: #F2F3F5; white-space: nowrap; border-top-left-radius: 11px; color: #202020;">Name</th>
+                <th align="left" style="padding-left: 10px; background-color: #F2F3F5; white-space: nowrap; color: #202020;">Email</th>
+                <th align="left" style="padding-left: 10px; background-color: #F2F3F5; white-space: nowrap; color: #202020;">Termination Date</th>
+                <th align="left" style="padding-left: 10px; background-color: #F2F3F5; white-space: nowrap; color: #202020;">Authority</th>
+                <th align="left" style="padding-left: 10px; background-color: #F2F3F5; white-space: nowrap; border-top-right-radius: 11px; color: #202020;">Application Name</th>
                 </thead>
                 <tbody style="font-size: 13px; font-weight: 500; color: #53585B;">
-                    <tr style="hover: background-color: #F6F6F6;">
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Chetan Sharma sdbcbncbdbcdvcdsvcsdvchdvbchd</td>
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">csharma@exelixis.com</td>
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Jun 17th, 2025</td>
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">System Owner</td>
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">1Password</td>
+                    <tr>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Chetan Sharma</td>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">csharma@exelixis.com</td>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Jun 17th, 2025</td>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">System Owner</td>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">1Password</td>
                     </tr>
-                    <tr style="hover: background-color: #F6F6F6;">
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Rohit Kumar</td>
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">rohkumar@exelixis.com</td>
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Jun 17th, 2025</td>
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Business Owner</td>
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">4G Clinical IRT</td>
+                    <tr>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Rohit Kumar</td>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">rohkumar@exelixis.com</td>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Jun 17th, 2025</td>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Business Owner</td>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">4G Clinical IRT</td>
                     </tr>
-                    <tr style="hover: background-color: #F6F6F6;">
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Ravi Kumar</td>
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">ravikumar@exelixis.com</td>
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Aug 12th, 2025</td>
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Product Owner</td>
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">AACR Journals</td>
+                    <tr>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Ravi Kumar</td>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">ravikumar@exelixis.com</td>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Aug 12th, 2025</td>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Product Owner</td>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">AACR Journals</td>
                     </tr>
-                    <tr style="hover: background-color: #F6F6F6;">
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Gokul Mohanarangan</td>
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">gmohanarangan@exelixis.com</td>
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Aug 18th, 2025</td>
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Secondary Approver</td>
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Accruent</td>
+                    <tr>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Gokul Mohanarangan</td>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">gmohanarangan@exelixis.com</td>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Aug 18th, 2025</td>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Secondary Approver</td>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Accruent</td>
                     </tr>
-                    <tr style="hover: background-color: #F6F6F6;">
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Prashanth Mamidala</td>
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">pmamidala@exelixis.com</td>
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Aug 20th, 2025</td>
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Primary Approver</td>
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Acrobat Pro</td>
+                    <tr>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Prashanth Mamidala</td>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">pmamidala@exelixis.com</td>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Aug 20th, 2025</td>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Primary Approver</td>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Acrobat Pro</td>
                     </tr>
-                    <tr style="hover: background-color: #F6F6F6;">
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px; border-bottom-left-radius: 11px;">Vijay Patibanda</td>
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">vpatibanda@exelixis.com</td>
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Aug 27th, 2025</td>
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">IT Contact</td>
-                        <td style="padding: 8px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px; border-bottom-right-radius: 11px;">Acrobat Sign</td>
+                    <tr>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px; border-bottom-left-radius: 11px;">Vijay Patibanda</td>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">vpatibanda@exelixis.com</td>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">Aug 27th, 2025</td>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px;">IT Contact</td>
+                        <td style="padding: 10px 0; border-bottom: 1px solid #E5E6EC; position: relative; padding-right: 24px; padding-left: 10px; border-bottom-right-radius: 11px;">Acrobat Sign</td>
                     </tr>
                 </tbody>
             </table>
@@ -155,20 +156,20 @@
   </tr>
   
   <!-- spacer -->
-  <tr><td colspan="2" style="height: 32px;"></td></tr>
+  <tr><td colspan="2" style="height: 44px;"></td></tr>
 
   <tr>
-    <td colspan="2" style="font-weight: 400; line-height: 24px; font-size: 16px; color: #53585B;">
+    <td colspan="2" style="font-weight: 400; line-height: 24px; font-size: 16px; color: #53585B; padding-bottom:4px">
       Thank you.
     </td>
   </tr>
 
   <tr>
-    <td colspan="2" style="font-weight: 600; line-height: 22px; font-size: 16px; padding-bottom: 8px; color: #53585B;">
+    <td colspan="2" style="font-weight: 600; line-height: 24px; font-size: 16px; padding-bottom: 18px; color: #11162F;">
        Self Service Portal
     </td>
   </tr>
-
+      
   <tr>
     <td colspan="2" style="font-weight: 400; line-height: 22px; font-size: 14px; color: #53585B;">
         This is a system generated message. Do not reply.
